# AutoBlogVideoNpodCast

./: DEPENDENCIES.md  INSTALLATION.md  KOKORO_SETUP.md  README.md  REQUIREMENTS.md
blog_to_video/notes/: README.md
blog_to_video/source/: post.md
blog_visual_engine/: .gitignore  LICENSE  README.md  blog_to_audio.py  pyproject.toml  requirements-dev.txt  requirements.txt
blog_visual_engine/blog_visual_engine/: __init__.py
blog_visual_engine/blog_visual_engine/audio/: kokoro_tts.py  tts.py
blog_visual_engine/blog_visual_engine/config/: defaults.py  theme.py
blog_visual_engine/blog_visual_engine/slides/: impress.py
blog_visual_engine/blog_visual_engine/utils/: paths.py
blog_visual_engine/blog_visual_engine/visuals/: charts.py  layouts.py
blog_visual_engine/examples/: kokoro_tts_demo.py  tts_demo.py
blog_visual_engine/examples/minimal_post/: build.py  post.md
blog_visual_engine/tests/: test_imports.py
venv_kokoro/: pyvenv.cfg
venv_kokoro/Scripts/: activate  activate.bat  num2words
